--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,1 +1,4 @@
-<p ng-controller="IndexController">Welcome to {{header}}</p>
+<section ng-controller="IndexController">
+	<h1>{{header}}</h1>
+	<p>Welcome to {{header}}</p>
+</section>
