--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,4 +1,4 @@
 <section ng-controller="IndexController">
-	<h1>{{header}}</h1>
-	<p>Welcome to {{header}}</p>
+	<h1>{{siteName}}</h1>
+	<p>Welcome to {{siteName}}</p>
 </section>
