--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,4 +1,4 @@
 <section ng-controller="IndexController">
-	<h1>{{siteName}}</h1>
-	<p>Welcome to {{siteName}}</p>
+	<h1 id="siteName">{{siteName}}</h1>
+	<input class="searchBar" placeholder="find artists" spellcheck="false" type="search">
 </section>
