--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -2,29 +2,52 @@ body {
 	background-color: #f7f7f7;
  	padding: 50px;
  	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+ 	margin: 0;
+ 	padding: 0;
 }
 
 a {
 	color: #00B7FF;
 }
 
+#topBar {
+	height: 50px;
+	background-color: black;
+}
+
+#logo {
+	font-family: 'proxima-nova-n7','proxima-nova',sans-serif;
+	padding-top: 6px;
+	font-size: 30px;
+	color: white;
+	margin-top: 0;
+	margin-left: 10px;
+	letter-spacing: 2px;
+}
+
 #siteName {
 	font-family: 'proxima-nova-n7','proxima-nova',sans-serif;
 	font-weight: 700;
 	text-align: center;
-	font-size: 60px;
+	font-size: 80px;
 	margin-top: 8%;
+	letter-spacing: 5px;
 }
 
 .searchBar {
-	display:block;
-	font-size: 20px;
+	font-family: 'proxima-nova-n7','proxima-nova',sans-serif;
+	display: block;
+	font-size: 30px;
 	text-indent: 10px;
 	margin: 5% auto 0% auto;
-	width:80%;
+	width: 80%;
 	max-width: 40%;
 	background-color: transparent;
 	border: 0;
 	border-radius: 0;
 	border-bottom: 1px solid #aaaaaa;
+}
+
+.searchBar:focus{
+	outline: none;
 }
