--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,4 +1,7 @@
 <section ng-controller="IndexController">
+	<div id="topBar">
+		<h1 id="logo">{{siteName}}</h1>
+	</div>
 	<h1 id="siteName">{{siteName}}</h1>
-	<input class="searchBar" placeholder="find artists" spellcheck="false" type="search">
+	<input class="searchBar" placeholder=" find artists, art, curators..." spellcheck="false" type="search" autofocus>
 </section>
