--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,12 +1,32 @@
 <section ng-controller="IndexController">
 	<div id="topBar">
 		<a href="index.html"><h1 id="logo">{{siteName}}</h1></a>
+		<div class="menuButtons">
+			<p>register</p>
+			<p>discover</p>
+			<p>about</p>
+		</div>
 	</div>
 	<h1 id="siteName">{{siteName}}</h1>
+	<!--<table class="tableRow">
+		<tr>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+		</tr>
+		<tr>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
+		</tr>
+	</table>-->
 	<div class="center">
 		<input class="searchBar" placeholder=" find artists, art, curators..." spellcheck="false" type="search" autofocus>
 		<!--<div class="searchButton">
 			<button> &#128270; </button>
 		</div>-->
 	</div>
+	<div id="transparencyBox"></div>
 </section>
