--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,6 +8,9 @@
 		</div>
 	</div>
 	<h1 id="siteName">{{siteName}}</h1>
+	<form method="POST" action="http://172.16.212.187:3000/user/slkj">
+		<button type="submit">hello</button>
+	</form>
 	<!--<table class="tableRow">
 		<tr>
 				<td class="tableCells"> <img id="homeImage" src="http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-21.jpg"></td>
@@ -30,3 +33,4 @@
 	</div>
 	<div id="transparencyBox"></div>
 </section>
+
