major design improvements

--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -12,10 +12,10 @@
 			<p>share</p>
 		</div>
 		<ul class="tabs"> 
-      <li class="active" rel="tab1">followers</li>
-      <li rel="tab2">artwork</li>
-      <li rel="tab3">showings</li>
-      <li rel="tab4">profile</li>
+      <li class="active" rel="tab1">profile</li>
+      <li rel="tab2">showings</li>
+      <li rel="tab3">artwork</li>
+      <li rel="tab4">followers</li>
   	</ul>
 	</div>
 
