--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1,5 +1,5 @@
 body {
-	background-color: white !important;
+	background-color: #d3d3d3 !important;
  	padding: 50px;
  	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  	margin: 0;
@@ -33,7 +33,7 @@ button:focus {
 .menuButtons {
 	float: right;
 	width: 100%;
-	background-color: white;
+	background-color: rgba(255,255,255,0.7);
 	margin-top: 0;
 	padding-top: 6px;
 	padding-bottom: 6px;
@@ -206,7 +206,7 @@ ul.tabs {
 		text-align: center;
 	}
 	ul.tabs li {
-		float: right;
+		float: left;
 		width: 25%;
 		cursor: pointer;
 		padding: 0px 21px;
@@ -214,50 +214,47 @@ ul.tabs {
 		text-align: middle;
 		letter-spacing: 1px;
 		line-height: 31px;
-		border-top: 1px solid rgba(0, 0, 0, 0.2);
-		border-bottom: 1px solid black;
     -webkit-transition-duration: 0.1s;
     -moz-transition-duration: 0.1s;
     transition-duration: 0.1s;
 	}
 	ul.tabs li:hover {
-		background-color: white;
-		border-left: 1px solid black;
-		border-right: 1px solid black;
+		background-color: black;
+		color: white;
 	}	
 	ul.tabs li.active{
 		background-color: white;
-		border-right: 1px solid black;
-		border-left: 1px solid black;
-		border-bottom: 1px solid white;
 		color: black;
 	}
 	.tab_container {
 		position: block;
 		width: 100%;
-		height: 100px;
+		height: auto;
 	}
 	.tab_content {
 		position: block;
 		float: left;
 		width: 100%;
-		padding: 10px;
+		padding: 50px;
 		font-size: 1.2em;
-		height: 500px;
+		height: 100vh;
+		background-color: white;
 	}
 	#rightSection {
 		width: 88%;
 		min-width: 300px;
 		display: block;
-		float: left;
+		float: right;
 		margin-top: 78px;
-		height: auto;
+		height: 100vh;
 	}
 	#leftSection {
+		position: fixed;
+		top: 0;
 		display: block;
 		float: left;
 		width: 12%;
-		border-right: 1px solid black;
+		border-right: none;
 		height: 100vh;
 		background-color: #d3d3d3;
 	}
