--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1,7 +1,7 @@
 body {
-	background-color: #d3d3d3 !important;
+	background-color: white;
  	padding: 50px;
- 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+ 	font: 14px;
  	margin: 0;
  	padding: 0;
  	font-family: 'proxima-nova-n7','proxima-nova',sans-serif;
@@ -33,11 +33,11 @@ button:focus {
 .menuButtons {
 	float: right;
 	width: 100%;
-	background-color: rgba(255,255,255,0.7);
+	background-color: #8E8E93;
 	margin-top: 0;
 	padding-top: 6px;
 	padding-bottom: 6px;
-	border-bottom: 1px solid black;
+	border-bottom: 0px solid black;
 	text-align: center !important;
 	cursor: pointer;
 }
@@ -46,7 +46,7 @@ button:focus {
 	font-family: 'proxima-nova-n7','proxima-nova',sans-serif;
 	font-size: 12px;
 	letter-spacing: 2px;
-	color: black;
+	color: white;
 	float: right;
 	margin-top: 8px;
 	padding-right: 30px;
@@ -61,7 +61,6 @@ button:focus {
 }
 
 .menuButtons p:hover{
-	color: #808080;
 	text-decoration: underline;
 }
 
@@ -72,7 +71,7 @@ button:focus {
 	text-indent: 30px;
 	padding-top: 6px;
 	font-size: 30px;
-	color: black;
+	color: white;
 	margin-top: 0;
 	letter-spacing: 2px;
 }
@@ -188,7 +187,7 @@ button {
 	width: 80%;
 	padding: 0px;
 	border-radius: 150px;
-	box-shadow: 1px 1px 1px 1px grey;
+	border: 1px solid #C7C7CC;
 }
 
 ul {
@@ -197,13 +196,14 @@ ul {
 ul.tabs {
 		position: block;
 		float: right;
-		background-color: rgba(211,211,211,0.7);
+		background-color: rgba(255,255,255,0.9);
 		padding: 0;
 		list-style: none;
 		height: auto;
 		border: none;
 		width: 88%;
 		text-align: center;
+		border-bottom: 1px solid #C7C7CC;
 	}
 	ul.tabs li {
 		float: left;
@@ -211,24 +211,21 @@ ul.tabs {
 		cursor: pointer;
 		padding: 0px 21px;
 		height: 105%;
+		border-radius: 3px;
 		text-align: middle;
 		letter-spacing: 1px;
 		line-height: 31px;
     -webkit-transition-duration: 0.1s;
     -moz-transition-duration: 0.1s;
     transition-duration: 0.1s;
-    box-shadow: inset 0 -10px 10px -8px grey;
-    -moz-box-shadow: inset 0 -10px 10px -8px grey;
-    -webkit-box-shadow: inset 0 -10px 10px -8px grey;
+
 	}
 	ul.tabs li:hover {
-		background-color: black;
-		color: white;
+		color: #1D62F0;
 	}	
 	ul.tabs li.active{
-		background-color: rgba(255,255,255,0.7);
-		color: black;
-		box-shadow: 1px 1px 1px 1px grey;
+		color: #1D62F0;
+		text-decoration: none;
 	}
 	.tab_container {
 		position: block;
@@ -258,33 +255,32 @@ ul.tabs {
 		display: block;
 		float: left;
 		width: 12%;
-		border-right: none;
+		border-right: 1px solid #C7C7CC;
 		height: 100vh;
-		background-color: #d3d3d3;
-		box-shadow: inset 1px 1px 10px 1px grey;
+		background-color: white;
 	}
 	#leftButtons {
 		display: block;
 		margin: auto auto auto auto;
-		width: 80%;
+		width: 70%;
 	}
 	#leftButtons button {
-		font-size: 100%;
+		font-size: 1.2vw;
 		letter-spacing: 0.5px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
 		margin-top: 10px;
 		width: 100%;
-		height: 35px;
-		border: none;
-		background-color: #e7e7e7;
-		box-shadow: 1px 1px 1px 1px grey;
+		height: 10%;
+		border: 1px solid #C7C7CC;
+		background-color: white;
+		border-radius: 3px;
 		-webkit-transition-duration: 0.1s;
     -moz-transition-duration: 0.1s;
     transition-duration: 0.1s;
 	}
 	#leftButtons button:hover {
-		background-color: black;
-		color: white;
+		border: 1px solid #1D62F0;
+		color: #1D62F0;
 	}
