edit user routes and controllers

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,6 +5,8 @@
 			<p>register</p>
 			<p>discover</p>
 			<p>about</p>
+			<p><a href="#">login</a></p>
+			<p><a href="#/signup">signup</a></p>
 		</div>
 	</div>
 	<h1 id="siteName">{{siteName}}</h1>
